--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
 body {
   /* font-family: "Poppins", sans-serif; */
   background-color: #fdfdfd;
@@ -15,3 +17,37 @@ input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
   display: none;
 }
+
+/* .navbar {
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
+} */
+
+/* .lh-button {
+  @apply text-center uppercase tracking-wider py-4 px-8 text-[13px] font-semibold cursor-pointer rounded-md hover: bg-opacity-90 bg-baseOrange text-white w-max
+}
+
+.dropdown {
+  @apply w-full lg: max-w-[296px] cursor-pointer;
+}
+
+.dropdown-btn {
+  @apply flex h-[64px] items-center px-[18px] border rounded-lg;
+}
+
+.dropdown-icon-primary {
+  @apply text-2xl mr-[18px] text-violet-700;
+}
+
+.dropdown-icon-secondary {
+  @apply text-2xl text-violet-700 ml-auto;
+}
+
+.dropdown-menu {
+  @apply px-6 py-8 text-[15px] space-y-6 shadow-md bg-white absolute w-full z-10 list-none rounded-b-lg;
+}
+
+.error-input {
+  border-color: #e53e3e;
+} */
