--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 body {
   background: white;
-  font-family: "Poppins", sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  
   overflow-x: hidden;
   margin: 0;
   padding: 0;
@@ -25,8 +24,8 @@ input[type="password"]::-ms-clear {
   z-index: 10;
   overflow: hidden;
 } */
-
-/* .lh-button {
+/* 
+ .lh-button {
   @apply text-center uppercase tracking-wider py-4 px-8 text-[13px] font-semibold cursor-pointer rounded-md hover: bg-opacity-90 bg-baseOrange text-white w-max
 }
 
@@ -48,9 +47,9 @@ input[type="password"]::-ms-clear {
 
 .dropdown-menu {
   @apply px-6 py-8 text-[15px] space-y-6 shadow-md bg-white absolute w-full z-10 list-none rounded-b-lg;
-}
+} */
 
-.error-input {
+/*.error-input {
   border-color: #e53e3e;
 } */
 
